k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live
  namespace: live
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-io-auth
      containers:
        - name: live
          image: ghcr.io/mahd-dev/live:latest
          ports:
            - name: http
              containerPort: 80
