k8s/base/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: live
  namespace: live
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live
  namespace: live
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
